# repaso-fundepos-modelacion-fin

./: README.md  main.py  modelacion.ipynb  pyproject.toml  reporte_financiero.html
